<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up_text"
        android:textColor="@color/colorPurpleLight"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/signUpText"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/sign_up_image2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sign_up_credential_holder"
        android:elevation="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInputLayoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_up_credential_holder"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_up_credential_holder"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_up_credential_holder"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileInputLayoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_up_credential_holder"
                android:ems="10"
                android:hint="@string/mobile_hint"
                android:inputType="phone"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_button"
            android:text="@string/sign_up_next_button"
            android:textColor="@color/colorSeparator"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>